--- a/app/src/main/res/layout/fragment_leader_board.xml
+++ b/app/src/main/res/layout/fragment_leader_board.xml
@@ -5,5 +5,9 @@
     android:layout_height="match_parent"
     tools:context=".leaderBoard.LeaderBoardFragment">
 
-
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/leaderBoardRv"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:listitem="@layout/leader_board_item" />
 </FrameLayout>
